--- a/resource/skill_sound.yaml
+++ b/resource/skill_sound.yaml
@@ -503,7 +503,7 @@ skill_shanxunya: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_003.mp3'
 skill_shanguangya: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_002.mp3'
 skill_kuaigong: 'https://seer2-resource.yuuinih.com/sound/skill/07_1_003.mp3'
 skill_fuchong: 'https://seer2-resource.yuuinih.com/sound/skill/07_1_001.mp3'
-skill_xiangyu: 'https://seer2-resource.yuuinih.com/sound/skill/07_1_002.mp3'
+skill_xiangyuqie: 'https://seer2-resource.yuuinih.com/sound/skill/07_1_002.mp3'
 skill_xiangyuren: 'https://seer2-resource.yuuinih.com/sound/skill/07_2_003.mp3'
 skill_chenmo: 'https://seer2-resource.yuuinih.com/sound/skill/07_3_001.mp3'
 skill_kongzhiguiji: 'https://seer2-resource.yuuinih.com/sound/skill/07_1_002.mp3'
