--- a/data/skill.yaml
+++ b/data/skill.yaml
@@ -6074,3 +6074,198 @@
   ignoreShield: false
   tags: []
   priority: 1
+- id: skill_kuaigong
+  element: Normal
+  category: Physical
+  target: opponent
+  power: 45
+  rage: 0
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  priority: 1
+- id: skill_fuchong
+  element: Normal
+  category: Physical
+  target: opponent
+  power: 60
+  rage: 5
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_reduce_foe_def_1_stage_5_percent
+- id: skill_xiangyuqie
+  element: Flying
+  category: Physical
+  target: opponent
+  power: 70
+  rage: 10
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_fixed_damage_40
+- id: skill_xiangyuren
+  element: Flying
+  category: Special
+  target: opponent
+  power: 75
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_fixed_damage_40
+- id: skill_chenmo
+  element: Normal
+  category: Status
+  target: opponent
+  power: 0
+  rage: 20
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_foe_chenmo
+- id: skill_kongzhiguiji
+  element: Flying
+  category: Physical
+  target: opponent
+  power: 75
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_raise_spe_1_stage_after_2_uses
+- id: skill_zhanchi
+  element: Flying
+  category: Status
+  target: self
+  power: 0
+  rage: 10
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_raise_spe_1_stages
+- id: skill_xiangtianchong
+  element: Flying
+  category: Physical
+  target: opponent
+  power: 85
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_raise_atk_1_stage_after_2_uses
+- id: skill_xiangtianzhu
+  element: Flying
+  category: Special
+  target: opponent
+  power: 90
+  rage: 20
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_raise_spa_1_stage_after_2_uses
+- id: skill_yuhuachong
+  element: Normal
+  category: Physical
+  target: opponent
+  power: 90
+  rage: 20
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_raise_def_1_stage_after_2_uses
+- id: skill_yuhuawu
+  element: Normal
+  category: Special
+  target: opponent
+  power: 95
+  rage: 20
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_raise_spd_1_stage_after_2_uses
+- id: skill_shankongxiangliebo
+  element: Flying
+  category: Climax
+  target: opponent
+  power: 170
+  rage: 100
+  accuracy: 100
+  sureHit: true
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_raise_spa_1_stage_20_percent
+    - effect_skill_raise_atk_1_stage_20_percent
+- id: skill_huiyizhongxian
+  element: Flying
+  category: Physical
+  target: opponent
+  power: 10
+  rage: 10
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_lock_rage_to_10
+    - effect_skill_change_to_used_skill
+    - effect_skill_clear_transform_when_use
+- id: skill_fenshenshu
+  element: Flying
+  category: Status
+  target: self
+  power: 0
+  rage: 15
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_fenshen
+    - effect_skill_transfer_status_marks_to_foe
+- id: skill_tiankongliechong
+  element: Flying
+  category: Physical
+  target: opponent
+  power: 90
+  rage: 20
+  accuracy: 100
+  sureHit: true
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_raise_atk_1_stage_after_2_uses
+- id: skill_tiankongzhiwu
+  element: Flying
+  category: Special
+  target: opponent
+  power: 95
+  rage: 20
+  accuracy: 100
+  sureHit: true
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_raise_spa_1_stage_after_2_uses
