--- a/data/species.yaml
+++ b/data/species.yaml
@@ -4475,3 +4475,120 @@
     - mark_ability_renyi
   emblem:
     - mark_emblem_renzhe
+- id: pet_feiya
+  num: 156
+  element: Flying
+  baseStats:
+    hp: 90
+    atk: 128
+    spa: 123
+    def: 113
+    spd: 118
+    spe: 116
+  genderRatio:
+    - 1
+    - 0
+  heightRange:
+    - 24
+    - 29
+  weightRange:
+    - 8
+    - 13
+  learnable_skills:
+    - skill_id: skill_kuaigong
+      level: 1
+      hidden: false
+    - skill_id: skill_fuchong
+      level: 5
+      hidden: false
+    - skill_id: skill_yili
+      level: 10
+      hidden: false
+    - skill_id: skill_xiangyuqie
+      level: 15
+      hidden: false
+    - skill_id: skill_xiangyuren
+      level: 20
+      hidden: false
+    - skill_id: skill_chenmo
+      level: 25
+      hidden: false
+  ability:
+    - mark_ability_feixiang
+  emblem:
+    - mark_emblem_fenshen
+- id: pet_feiyasi
+  num: 157
+  element: Flying
+  baseStats:
+    hp: 180
+    atk: 178
+    spa: 173
+    def: 158
+    spd: 163
+    spe: 166
+  genderRatio:
+    - 1
+    - 0
+  heightRange:
+    - 88
+    - 93
+  weightRange:
+    - 47
+    - 52
+  learnable_skills:
+    - skill_id: skill_kuaigong
+      level: 1
+      hidden: false
+    - skill_id: skill_fuchong
+      level: 5
+      hidden: false
+    - skill_id: skill_yili
+      level: 10
+      hidden: false
+    - skill_id: skill_xiangyuqie
+      level: 15
+      hidden: false
+    - skill_id: skill_xiangyuren
+      level: 20
+      hidden: false
+    - skill_id: skill_chenmo
+      level: 25
+      hidden: false
+    - skill_id: skill_kongzhiguiji
+      level: 30
+      hidden: false
+    - skill_id: skill_zhanchi
+      level: 35
+      hidden: false
+    - skill_id: skill_xiangtianchong
+      level: 40
+      hidden: false
+    - skill_id: skill_xiangtianzhu
+      level: 45
+      hidden: false
+    - skill_id: skill_yuhuachong
+      level: 50
+      hidden: false
+    - skill_id: skill_yuhuawu
+      level: 55
+      hidden: false
+    - skill_id: skill_shankongxiangliebo
+      level: 60
+      hidden: true
+    - skill_id: skill_huiyizhongxian
+      level: 60
+      hidden: true
+    - skill_id: skill_fenshenshu
+      level: 60
+      hidden: true
+    - skill_id: skill_tiankongliechong
+      level: 60
+      hidden: true
+    - skill_id: skill_tiankongzhiwu
+      level: 60
+      hidden: true
+  ability:
+    - mark_ability_feixiang
+  emblem:
+    - mark_emblem_fenshen
