--- a/resource/skill_sound.yaml
+++ b/resource/skill_sound.yaml
@@ -501,3 +501,19 @@ skill_baiyalianbozhan: 'https://seer2-resource.yuuinih.com/sound/skill/10935.mp3
 skill_xulichongji: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_001.mp3'
 skill_shanxunya: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_003.mp3'
 skill_shanguangya: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_002.mp3'
+skill_kuaigong: 'https://seer2-resource.yuuinih.com/sound/skill/07_1_003.mp3'
+skill_fuchong: 'https://seer2-resource.yuuinih.com/sound/skill/07_1_001.mp3'
+skill_xiangyuqie: 'https://seer2-resource.yuuinih.com/sound/skill/07_1_002.mp3'
+skill_xiangyuren: 'https://seer2-resource.yuuinih.com/sound/skill/07_2_003.mp3'
+skill_chenmo: 'https://seer2-resource.yuuinih.com/sound/skill/07_3_001.mp3'
+skill_kongzhiguiji: 'https://seer2-resource.yuuinih.com/sound/skill/07_1_002.mp3'
+skill_zhanchi: 'https://seer2-resource.yuuinih.com/sound/skill/07_3_001.mp3'
+skill_xiangtianchong: 'https://seer2-resource.yuuinih.com/sound/skill/07_1_003.mp3'
+skill_xiangtianzhu: 'https://seer2-resource.yuuinih.com/sound/skill/07_2_002.mp3'
+skill_yuhuachong: 'https://seer2-resource.yuuinih.com/sound/skill/07_1_001.mp3'
+skill_yuhuawu: 'https://seer2-resource.yuuinih.com/sound/skill/07_2_002.mp3'
+skill_shankongxiangliebo: 'https://seer2-resource.yuuinih.com/sound/skill/11012.mp3'
+skill_huiyizhongxian: 'https://seer2-resource.yuuinih.com/sound/skill/07_1_003.mp3'
+skill_fenshenshu: 'https://seer2-resource.yuuinih.com/sound/skill/07_3_002.mp3'
+skill_tiankongliechong: 'https://seer2-resource.yuuinih.com/sound/skill/07_2_001.mp3'
+skill_tiankongzhiwu: 'https://seer2-resource.yuuinih.com/sound/skill/07_2_001.mp3'
