--- a/.env.example
+++ b/.env.example
@@ -40,3 +40,20 @@ SENDGRID_API_KEY=your-sendgrid-api-key
 AWS_SES_REGION=us-east-1
 AWS_ACCESS_KEY_ID=your-aws-access-key-id
 AWS_SECRET_ACCESS_KEY=your-aws-secret-access-key
+
+# 集群模式配置（默认启用）
+CLUSTER_ENABLED=true
+CLUSTER_INSTANCE_ID=app1
+CLUSTER_INSTANCE_HOST=localhost
+CLUSTER_INSTANCE_REGION=local
+
+# Redis 配置（集群模式必需）
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_DB=0
+REDIS_KEY_PREFIX=arcadia:
+REDIS_PASSWORD=
+REDIS_MAX_RETRIES=3
+REDIS_RETRY_DELAY=100
+REDIS_ENABLE_READY_CHECK=true
+REDIS_LAZY_CONNECT=true
