--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -32,15 +32,21 @@
     "@arcadia-eternity/protocol": "workspace:^",
     "@arcadia-eternity/schema": "workspace:^",
     "@aws-sdk/client-sesv2": "^3.828.0",
+    "@grpc/grpc-js": "^1.12.2",
+    "@grpc/proto-loader": "^0.7.15",
+    "@socket.io/redis-adapter": "^8.3.0",
     "@types/handlebars": "^4.1.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "handlebars": "^4.7.8",
     "inversify": "^7.5.2",
+    "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
     "nanoid": "^5.1.5",
     "nodemailer": "^7.0.3",
     "pino": "^9.7.0",
+    "prom-client": "^15.1.3",
+    "redis": "^5.5.6",
     "reflect-metadata": "^0.2.2",
     "socket.io": "^4.8.1",
     "swagger-jsdoc": "^6.2.8",
