--- a/packages/web-ui/.env
+++ b/packages/web-ui/.env
@@ -1,2 +1,2 @@
-VITE_WS_URL=localhost:8102
-VITE_API_BASE_URL=http://localhost:8102/api/v1
+VITE_WS_URL=http://localhost:8080
+VITE_API_BASE_URL=http://localhost:8080/api/v1
