--- a/packages/web-ui/.env.example
+++ b/packages/web-ui/.env.example
@@ -1,8 +1,15 @@
 # API 基础 URL
-VITE_API_BASE_URL=http://localhost:8107/api/v1
+# 单实例模式 (开发)
+# VITE_API_BASE_URL=http://localhost:8107/api/v1
+# VITE_WS_URL=http://localhost:8107
 
-# WebSocket URL (战斗服务器)
-VITE_WS_URL=http://localhost:8107
+# 集群模式 (通过Nginx负载均衡)
+VITE_API_BASE_URL=http://localhost:8080/api/v1
+VITE_WS_URL=http://localhost:8080
+
+# 直连应用实例 (调试用)
+# VITE_API_BASE_URL=http://localhost:8102/api/v1  # App1
+# VITE_WS_URL=http://localhost:8102
 
 # Supabase 配置（如果前端直接连接）
 VITE_SUPABASE_URL=your_supabase_project_url
