--- a/fly.toml
+++ b/fly.toml
@@ -20,24 +20,23 @@ min_machines_running = 1
 max_machines_running = 5
 processes = ['app']
 
-# gRPC 服务配置 - 仅内部使用，不暴露端口
-# gRPC 服务在内部网络中运行，不需要外部访问
-
-# Health check configuration
-[[services.http_checks]]
+# 健康检查配置 - 使用正确的数组格式
+[[http_service.checks]]
 interval = '30s'
 timeout = '10s'
 grace_period = '30s'
 method = 'GET'
 path = '/health'
 
-# Metrics endpoint for monitoring
-[[services.http_checks]]
+[[http_service.checks]]
 interval = '60s'
 timeout = '15s'
 grace_period = '30s'
 method = 'GET'
 path = '/metrics'
+
+# gRPC 服务配置 - 仅内部使用，不暴露端口
+# gRPC 服务在内部网络中运行，不需要外部访问
 
 [[vm]]
 memory = '1gb'
