--- a/.env.example
+++ b/.env.example
@@ -57,3 +57,11 @@ REDIS_MAX_RETRIES=3
 REDIS_RETRY_DELAY=100
 REDIS_ENABLE_READY_CHECK=true
 REDIS_LAZY_CONNECT=true
+
+# Redis 成本优化配置
+REDIS_COST_OPTIMIZATION=true
+
+# 监控数据存储配置（默认禁用Redis存储以节省成本）
+# 如果需要持久化监控数据到Redis，可以启用以下选项：
+# ENABLE_REDIS_METRICS_STORAGE=true   # 启用Redis监控数据存储
+# ENABLE_REDIS_ALERT_STORAGE=true     # 启用Redis告警数据存储
