--- a/packages/server/.env.cost-optimization
+++ b/packages/server/.env.cost-optimization
@@ -32,6 +32,11 @@ REDIS_SCAN_MAX_ITERATIONS=10          # 限制最大扫描次数
 # 启用成本优化模式
 REDIS_COST_OPTIMIZATION=true
 
+# 监控数据存储优化（默认禁用Redis存储以节省成本）
+# 如果需要持久化监控数据，可以启用以下选项：
+# ENABLE_REDIS_METRICS_STORAGE=true   # 启用Redis监控数据存储
+# ENABLE_REDIS_ALERT_STORAGE=true     # 启用Redis告警数据存储
+
 # 日志级别（减少日志输出也能节约一些资源）
 LOG_LEVEL=info
 
